Show the target text correctly when jumped to citation anchor
By default, inter-language link emphasized by this style will be hidden the citation target text.

--- a/Wikipedia_tweak.user.css
+++ b/Wikipedia_tweak.user.css
@@ -24,7 +24,8 @@
   #p-lang li.interwiki-en a:after, #p-lang li.interwiki-ja a:after { content: " \bb\a0 " attr(title); }
   #p-lang li.interwiki-en a:hover, #p-lang li.interwiki-ja a:hover { background: #f70 !important; }
 
-  .mw-headline:target { padding-top: 3rem !important; }
+  .mw-headline:target, .reference:target { padding-top: 3rem !important; background: transparent !important; }
+  .reference:target > a { color: #f70 !important; font-weight: bold !important; }
 
 
   /* Show last modified timestamp at header section */
